test/fixtures/fail/number_exp_plus_f_no_dot.l4gs.g
; Same rule, exponent form without a decimal point: still can't combine with `f`.
        dq 1e5f
